<resources>
    <string name="app_name">KGS YKS Destek</string>

    <string name="nav_home">Ana Ekran</string>
    <string name="nav_chart">Analiz</string>
    <string name="nav_favourite">Favoriler</string>
    <string name="nav_profile">Profil</string>
    <string name="nav_add">Soru Ekle</string>

    <string name="guide1">Kılavuz Ekranı 1</string>
    <string name="guide2">Kılavuz Ekranı 2</string>
    <string name="guide3">Kılavuz Ekranı 3</string>

    <string name="btn_guide1">Keşfet -></string>
    <string name="title_activity_test">TestActivity</string>

    <string name="welcome">Hoşgeldin,</string>
    <string name="user_name">Kaan Gül</string>
    <string name="soru_sayisi">Soru Sayısı</string>
    <string name="soru_number">120</string>

    <string name="mat">Matematik</string>
    <string name="geo">Geometri</string>
    <string name="ck">Coğrafya</string>
    <string name="tarih">Tarih</string>
    <string name="felsefe">Felsefe</string>
    <string name="turkce">Türkçe</string>
    <string name="biyo">Biyoloji</string>
    <string name="kimya">Kimya</string>
    <string name="fizik">Fizik</string>
    <string name="din">Din</string>

    <string name="btn1">Rastgele</string>

    <string name="tyt">TYT</string>
    <string name="ayt">AYT</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sil">SilActivity</string>
</resources>