<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/nav_chart"
            android:icon="@drawable/ic_equalizer"
            android:title="@string/nav_chart"  />
    <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_photo_camera"
            android:title="@string/nav_add" />
    <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
    <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/nav_favourite" />
    <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/nav_profile" />
</menu>